  [Christopher Brooks]
  * Added the option of using a modified form of the Campbell and Bozorgnia
    (2014) GMM's sigma model within the Kuehn et al. (2020) GMMs as required
    for the 2023 USGS Alaska model.
  * Refactored the indirect AvgSA GMPEs capabilities to permit the
    calculation of non-AvgSA IMTs using the underlying GMPE (added
    new unit test of classical/case_91 for checking this works within
    GmpeIndirectAvgSA and updated classical/case34 for checking this
    works within GenericGmpeAvgSA).

  [Michele Simionato]
  * Internal: removed configuration parameter `pmap_max_gb`
  * Implemented the "ilabel" feature i.e. region-dependent gsim logic trees
  * Reduced the number of chunks generated in classical calculations, which
    has a huge effect on performance if you have 192 cores or more

  [Christopher Brooks]
  * Fixing class inheritances in MorikawaFujiwara2013 GMMs.

  [Amirhossein Mohammadi]
  * Added Mohammadi2023Turkiye ML-based GSIM for Turkey.

  [Christopher Brooks]
  * Added the Alaska bias adjustments for the NGASUB GMMs
    as required for the USGS 2023 Alaska model.

  [Antonio Scala]
  * Added Scala et al (2025) GMM

  [Michele Simionato]
  * Show the GSIM class warnings only once
  * Extended `oq engine --lhc` and `oq engine --lrc` to show the
    calculation_mode

  [Christopher Brooks]
  * Refactored conditional GMPEs to be specifiable within ModifiableGMPE
    on a per-IMT basis (safer handling, more flexibility).
  * Added documentation for the implementation of conditional GMPEs within
    the OpenQuake Engine.

  [Michele Simionato]
  * Added a consistency check on the effective time when starting from SES
  * Added a new exporter hmaps-stats producing one file per return period

  [Maoxin Wang]
  * Added a new gsim file wang_2025_turkey.py to implement the Turkey-specific
    ground motion models for Arias Intensity (IA), Cumulative Absolute Velocity